--- a/ingredient-service/pom.xml
+++ b/ingredient-service/pom.xml
@@ -88,6 +88,11 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
